--- a/authenticate/templates/auth.html
+++ b/authenticate/templates/auth.html
@@ -45,11 +45,12 @@
     }
 
     .form-container {
-        width: 600px; /* Increased width */
+        width: 500px; /* Increased width */
+        height: 660px;
         background-color: rgba(255, 255, 255, 0.9); /* Initial background */
         border-radius: 10px; /* Rounded corners */
         box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-        padding: 20px; /* Padding inside the container */
+        padding: 5px; /* Padding inside the container */
         position: relative; /* For positioning the oval background */
         animation: changeColorSignIn 0.5s forwards; /* Initial animation */
     }
